SERVER-56048 Fallback to the classic engine when a plan has ENSURE_SORTED node